Mon Sep 22 10:03:10 2003  George Lebl <jirka@5z.com>

	* slave/gdm.c, gui/gdmlogin.c, gui/greeter/greeter_session.c: Fix
	  session masking by path in the greeters and rework the 'Desktop'
	  -> 'desktop' migration code to be correct and simpler (migrate
	  where we read from the .dmrc)

Sat Sep 20 09:32:52 2003  George Lebl <jirka@5z.com>

	* gui/gdmlogin.c, gui/greeter/greeter_session.c: test for defsess and
	  savedsess in testing for switchdesk mode default rather then
	  'default.desktop'

Fri Sep 19 18:59:28 2003  George Lebl <jirka@5z.com>

	* gui/gdmlogin.c, gui/greeter/greeter_session.c: fix rh bug #104287,
	  The default session is not 'Xclients.desktop' but
	  'default.desktop'.  Also don't talk of 'switchdesk' if
	  /usr/bin/switchdesk is not around.

Fri Sep 19 18:00:37 2003  George Lebl <jirka@5z.com>

	* daemon/slave.c: Launch the greeter from a shell so that we get
	  a nice environment.  This is needed for both TryExec in the
	  sessions and for finding things in the path for the accessibility
	  modules

	* gui/gdmlogin.c: select all events on the login window, this will
	  catch all events so that the modules get them

	* gui/modules/AccessDwellMouseEvents.in,
	  gui/modules/AccessKeyMouseEvents.in: update the docs here and
	  use the path.  Also change <Mouse0> to <Mouse1>.  And make
	  it 4 times 4 seconds. to get gok.  1 time is annoying as hell.
	  Also add the same for <Mouse3> as that may be for a left handed
	  person.

	* gui/modules/dwellmouselistener.c, gui/modules/keymouselistener.c:
	  cleanups to both modules, fix it so that sequences aren't 1
	  longer in the key mouse listener, also don't kill the events.
	  it does kill a lot of real events, especially if we use the mouse
	  events.  We just have to deal with the mouse doing something.
	  We can't decide if it was a guesture until after it was done,
	  which means we're really out of luck.  Fixes #122658

Fri Sep 19 15:34:36 2003  George Lebl <jirka@5z.com>
